--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
 			<div class="promo-card-grid">
     
 				<div class="promo-card">
-				   <img src="image/portfolio/uv pics-06.png" alt="Card Image 1" class="promo-card-image">
+				   <img src="image/promo/promotional items-01.png" alt="Card Image 1" class="promo-card-image">
 					<div class="promo-card-content">
 					 <h2 class="promo-card-title">Glass Plaque</h2>
 					 <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
@@ -916,16 +916,41 @@
 				</div>
 
 				<div class="promo-card">
-					<img src="image/portfolio/uv pics-06.png" alt="Card Image 1" class="promo-card-image">
+						<img src="image/promo/promotional items-02.png" alt="Card Image 1" class="promo-card-image">
 					 <div class="promo-card-content">
-					  <h2 class="promo-card-title">Glass Plaque</h2>
+					  	<h2 class="promo-card-title">Metal & bamboo flask</h2>
+					  	<!-- <p class="promo-card-description">This is a description of card 1.</p> -->
+					 </div>
+				</div>
+
+				 <div class="promo-card">
+					<img src="image/promo/promotional items-03.png" alt="Card Image 1" class="promo-card-image">
+					 <div class="promo-card-content">
+					  <h2 class="promo-card-title">Digital wooden clock</h2>
 					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
 					 </div>
 				 </div>
+ 
 				 <div class="promo-card">
-					<img src="image/portfolio/uv pics-06.png" alt="Card Image 1" class="promo-card-image">
+					<img src="image/promo/promotional items-04.png" alt="Card Image 1" class="promo-card-image">
 					 <div class="promo-card-content">
-					  <h2 class="promo-card-title">Glass Plaque</h2>
+					  <h2 class="promo-card-title">Rock Plaque</h2>
+					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
+					 </div>
+				 </div>
+ 
+				 <div class="promo-card">
+					<img src="image/promo/promotional items-05.png" alt="Card Image 1" class="promo-card-image">
+					 <div class="promo-card-content">
+					  <h2 class="promo-card-title">Metalic vaccum flasks</h2>
+					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
+					 </div>
+				 </div>
+
+				 <div class="promo-card">
+					<img src="image/promo/promotional items-06.png" alt="Card Image 1" class="promo-card-image">
+					 <div class="promo-card-content">
+					  <h2 class="promo-card-title">Note Books</h2>
 					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
 					 </div>
 				 </div>
