--- a/index.html
+++ b/index.html
@@ -954,6 +954,8 @@
 					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
 					 </div>
 				 </div>
+
+				 <a class="btn-main" href="promo-page.html">See More</a>
 				
 			</div>
 			
