--- a/promo-page.html
+++ b/promo-page.html
@@ -120,7 +120,7 @@
                  <div class="promo-card">
 					<img src="image/promo/promotional items2-01.png" alt="Card Image 1" class="promo-card-image">
 					 <div class="promo-card-content">
-					  <h2 class="promo-card-title">Note Books</h2>
+					  <h2 class="promo-card-title">Frame</h2>
 					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
 					 </div>
 				 </div>
