--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
 					 </div>
 				 </div>
 
-				 <a class="btn-main" href="promo-page.html">See More</a>
+				 <a class="btn-main" href="promo-page.html">Click here to see more <i class="fa-solid fa-arrow-right"></i></a>
 				
 			</div>
 			
