--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"><i class='bx bx-menu' ></i></span>
 		    </button>
+			
 		    
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ms-auto mb-lg-0">
@@ -1699,7 +1700,7 @@
 					<div class="icon-box"><a href="#"><i class='bx bxs-phone-call'></i></a></div>
 					<div class="content-wrapper">
 						<h4>Phone</h4>
-						<a href="#">+256 709 711 516</a>
+						<a href="tel:+256 709 711 516">+256 709 711 516</a>
 					</div>
 				</div>
 				<div class="col-lg-4 d-flex justify-content-xxl-center align-items-xl-center" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400">
@@ -1707,7 +1708,7 @@
 					<div class="icon-box"><a href="#"><i class='bx bx-envelope'></i></a></div>
 					<div class="content-wrapper">
 						<h4>Email</h4>
-						<a href="#">info@romanmediaug.com</a>
+						<a href="mailto:info@romanmediaug.com">info@romanmediaug.com</a>
 					</div>
 				</div>
 			</div> <!-- .row -->
