--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 	<!-- PRE LOADER -->
 	<div class="preloader js-preloader flex-center">
 		<div class="dots">
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
+			
 			
 		</div>
 	</div>
@@ -1700,7 +1698,7 @@
 					<div class="icon-box"><a href="#"><i class='bx bxs-phone-call'></i></a></div>
 					<div class="content-wrapper">
 						<h4>Phone</h4>
-						<a href="tel:+256 709 711 516">+256 709 711 516</a>
+						<a href="tel:+256709711516">+256 709 711 516</a>
 					</div>
 				</div>
 				<div class="col-lg-4 d-flex justify-content-xxl-center align-items-xl-center" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400">
