--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 	<!-- PRE LOADER -->
 	<div class="preloader js-preloader flex-center">
 		<div class="dots">
-			
-			
+		<div></div>	
+		<div></div>	
+		<div></div>	
 		</div>
 	</div>
 
@@ -100,7 +101,7 @@
 									<h4>Total <br>Projects</h4>
 								</li>
 								<li>
-									<p>200<span>+</span></p>
+									<p>500<span>+</span></p>
 									<h4>Nationwide <br>Clients</h4>
 								</li>
 
@@ -292,6 +293,7 @@
 				<button class="" data-filter=".development">Large Format Printing</button>
 				<button class="" data-filter=".design">Digital Printing</button>
 				<button class="" data-filter=".application">DTF Printing</button>
+				<button class="" data-filter=".application">Fiber Marking</button>
 			</div>
 			<div class="row grid" data-aos="fade-up" data-aos-duration="2000">
 				<div class="col-lg-4 col-md-6 grid-item programming">
@@ -688,7 +690,7 @@
 			            <img src="image/portfolio/uv pics-09.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Large Format Printing</h3>
+			                <h3 class="title">Uv Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal3"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -909,7 +911,7 @@
 				<div class="promo-card">
 				   <img src="image/promo/promotional items-01.png" alt="Card Image 1" class="promo-card-image">
 					<div class="promo-card-content">
-					 <h2 class="promo-card-title">Glass Plaque</h2>
+					 <h2 class="promo-card-title">Awards</h2>
 					 <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
 					</div>
 				</div>
