--- a/promo-page.html
+++ b/promo-page.html
@@ -48,9 +48,9 @@
 		    
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav ms-auto mb-lg-0">
-		        <li class="nav-item">
+		        <!-- <li class="nav-item">
 		          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-		        </li>
+		        </li> -->
 		        
 		      </ul> <!-- .navbar-nav -->
 		    </div> <!-- .collapse -->
@@ -72,7 +72,7 @@
 				<div class="promo-card">
 				   <img src="image/promo/promotional items-01.png" alt="Card Image 1" class="promo-card-image">
 					<div class="promo-card-content">
-					 <h2 class="promo-card-title">Glass Plaque</h2>
+					 <h2 class="promo-card-title">Awards</h2>
 					 <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
 					</div>
 				</div>
@@ -161,7 +161,7 @@
 					<img src="image/promo/promotional items2-06.png" alt="Card Image 1" class="promo-card-image">
 					 <div class="promo-card-content">
 					  <h2 class="promo-card-title">Metalic Vaccum flasks</h2>
-					  <p class="promo-card-description">This is a description of card 1.</p>
+					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
 					 </div>
 				 </div>
 
