--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="description" content="Roman Media Graphics Limited is a Ugandan company specializing in commercial printing, graphics design, and general supplies.">
+	<link rel="canonical" href="https://www.romanmediaug.com/"/>
 	<!-- Favicon -->
 	<!-- <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="image/favicon.ico" type="image/x-icon"> -->
