--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	<!-- PRE LOADER -->
 	<div class="preloader js-preloader flex-center">
 		<div class="dots">
-		<div></div>	
-		<div></div>	
-		<div></div>	
+			<div class="dot"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
 		</div>
 	</div>
 
