--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
 						<div class="content-wrapper">
 							<h3>Printing</h3>
 							<p>
-								One way to categorize the activities is in terms of 
-								the professional’s area of expertise such as competitive analysis, corporate strategy.
+								Transform your printing needs with our state-of-the-art Printing  Whether you're a small business or a large enterprise
 							</p>
 						</div> <!-- .content-wrapper -->
 					</div> <!-- .item-wrapper -->
@@ -821,81 +820,7 @@
 		</div> <!-- .design-elements -->
 	</section> <!-- .portfolio-section -->
 
-	<!-- SERVICE SECTION 
-	<section class="service-section section-block" id="service-section">
-		<div class="container">
-			<div class="section-title dark">
-				<h2>Portfolio</h2>
-				<p class="lead">
-					Explore our unique and creative design gallery that showcases
-					our expertise in bringing ideas to life..
-				</p>
-			</div><!- .section-title ->
-			<div class="row">
-				<div class="col-xl-4 col-lg-6" data-aos="fade-up">
-					<div class="content-wrapper service-tilt" data-tilt data-tilt-max="15">
-						<div class="icon-box"><i class="pe-7s-monitor"></i></div>
-						<h3>Graphic Design</h3>
-						<p>
-							Yeprehe nderit in voluptate velit esse prehen pteur sint occaecat cupidat
-							cillum dolore eu fugiat nulla pan
-							proide ulpa rum.
-						</p>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="200">
-					<div class="content-wrapper service-tilt" data-tilt data-tilt-max="15">
-						<div class="icon-box"><i class="pe-7s-joy"></i></div>
-						<h3>UV Printing</h3>
-						<p>
-							Nulla sit amet maximus mass abitur et pharetra metus nec hendrerit enim iam condime justo at ore pag torem comodo.
-						</p>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="400">
-					<div class="content-wrapper service-tilt" data-tilt data-tilt-max="15">
-						<div class="icon-box"><i class="pe-7s-display2"></i></div>
-						<h3>Promotional Items</h3>
-						<p>
-							Donec sed magna uspen disse ac males uasuda lacus orekom nipsume dolor sit amet ectetur adip iscing elit eget ullamc dana.
-						</p>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="600">
-					<div class="content-wrapper service-tilt" data-tilt data-tilt-max="15">
-						<div class="icon-box"><i class="pe-7s-lock"></i></div>
-						<h3>Billboards</h3>
-						<p>
-							Det esse prehen pteur sint occaecat cupidat cillum dolore eu fugiat nulla kopa samsu kopa kidye je tare pan ontor ja ulpa rum.
-						</p>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="800">
-					<div class="content-wrapper service-tilt" data-tilt data-tilt-max="15">
-						<div class="icon-box"><i class="pe-7s-edit"></i></div>
-						<h3>Corporate Uniforms</h3>
-						<p>
-							Quisque ultricies nibh eu sapien convallis, at sollicitudin lacus mattis. Ut fringilla, eros vitae consequa proide nesha.
-						</p>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-6" data-aos="fade-up" data-aos-delay="1000">
-					<div class="content-wrapper service-tilt" data-tilt data-tilt-max="15">
-						<div class="icon-box"><i class="pe-7s-coffee"></i></div>
-						<h3>Outdoor Signages</h3>
-						<p>
-							Aliquam aliquam mi nisl, quis condim entum felis auctor vita sellus egestas eros scelerisque suscipit impe rdiet eque nulla.
-						</p>
-					</div>
-				</div>->
-			</div><- .row ->
-		</div> <!- .container ->
-		<div class="design-elements">
-			<img class="de-service-1 elem-updown" src="image/design-elements/service-element-1.png" alt="service element 1">
-			<img class="de-service-2 elem-updown" src="image/design-elements/service-element-2.png" alt="service element 2">
-			<img class="de-service-3 elem-updown" src="image/design-elements/service-element-3.png" alt="service element 3">
-		</div> <!- .design-elements ->
-	</section> <!- service-section -->
+	
 
 	 <!-- SERVICE SECTION  -->
 	<section class="service-section section-block" id="service-section">
