--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 <body data-bs-spy="scroll" data-bs-target="#site-navbar" class="home-main dark-mode">
 
 	<!-- PRE LOADER -->
-	<div class="preloader js-preloader flex-center">
+	<!-- <div class="preloader js-preloader flex-center">
 		<div class="dots">
 			<div class="dot"></div>
 			<div class="dot"></div>
 			<div class="dot"></div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- SITE HEADER -->
 	<header class="site-header" id="site-header">
@@ -112,7 +112,7 @@
 					</div> <!-- .image-block -->
 
 					<div class="col-xl-6 order-xl-first content-block">
-						<h1 class="hero-head"><small>Welcome to</small>Roman Media <strong>Graphics Ltd</strong></h1>
+						<h1 class="hero-head"><small>Welcome to</small>Roman Media <br> <strong>Graphics Ltd</strong></h1>
 						<p>
 							We specialize in <strong>high-quality </strong> graphic design, printing and branding solutions.
 						</p>
