--- a/index.html
+++ b/index.html
@@ -34,18 +34,11 @@
 
 	<link rel="icon" href="image/roman logo-02.png" type="image/x-icon"/>
 
-    <title>Roman Media Graphics</title>
+    <title>Roman Media Graphics Limited</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#site-navbar" class="home-main dark-mode">
 
-	<!-- PRE LOADER -->
-	<!-- <div class="preloader js-preloader flex-center">
-		<div class="dots">
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
-		</div>
-	</div> -->
+
 
 	<!-- SITE HEADER -->
 	<header class="site-header" id="site-header">
@@ -54,7 +47,7 @@
 		    <a class="navbar-brand" href="index.html"><img class="img-fluid" src="image/roman logo-02.png" alt="roman logo"></a>
 		    
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"><i class='bx bx-menu' ></i></span>
+				<span class="navbar-toggler-icon"><i class='bx bx-menu' ></i></span>
 		    </button>
 			
 		    
@@ -239,7 +232,7 @@
 					<h2><span>Our rating</span>We always assure Quality</h2>
 					<p class="lead">
 						Discover the creativity and precision that 
-						Roman Media Graphics brings to every project. 
+						Roman Media Graphics Limited brings to every project. 
 						From graphic design to branding, see how we make brands shine.
 					</p>
 				</div>
@@ -294,6 +287,7 @@
 				<button class="" data-filter=".design">Digital Printing</button>
 				<button class="" data-filter=".application">DTF Printing</button>
 				<button class="" data-filter=".application">Fiber Marking</button>
+				<button class="" data-filter=".application">Screen Printing</button>
 			</div>
 			<div class="row grid" data-aos="fade-up" data-aos-duration="2000">
 				<div class="col-lg-4 col-md-6 grid-item programming">
@@ -909,7 +903,7 @@
 				<div class="col-xl-6 content-block" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="400">
 					<h2 class="block-title"><span>Why work with us</span>Best results with top client experience</h2>
 					<p>
-						At Roman Media, we stand out in a crowded marketplace for several compelling reasons.
+						At Roman Media Graphics Limited, we stand out in a crowded marketplace for several compelling reasons.
 					</p>
 					<ul class="features-list">
 						<li class="d-flex align-items-start">
@@ -977,7 +971,7 @@
 								<img src="image/quote-icon.png" alt="quote icon">
 							</div>
 							<p>
-								"Working with Roman Media was a game-changer for our brand. Their team took the time to understand our vision 
+								"Working with Roman Media Graphics Limited was a game-changer for our brand. Their team took the time to understand our vision 
 								and delivered stunning designs that captured our essence perfectly. The quality of the printed materials was exceptional, 
 								and we’ve received countless compliments!"
 							</p>
@@ -996,7 +990,7 @@
 								<img src="image/quote-icon.png" alt="quote icon">
 							</div>
 							<p>
-								"I can’t recommend Roman Media enough! From the initial consultation to the final delivery, the process was smooth and professional.
+								"I can’t recommend Roman Media Graphics Limited enough! From the initial consultation to the final delivery, the process was smooth and professional.
 								 They helped revamp our branding, and the results have significantly boosted our visibility in the market."
 							</p>
 							<div class="quote-author d-flex align-items-center justify-content-center">
@@ -1014,7 +1008,7 @@
 								<img src="image/quote-icon.png" alt="quote icon">
 							</div>
 							<p>
-								"The team at Roman Media is truly talented. They designed our logo and marketing materials, and we couldn’t be happier. 
+								"The team at Roman Media Graphics Limited is truly talented. They designed our logo and marketing materials, and we couldn’t be happier. 
 								Their attention to detail and commitment to quality made all the difference. We’ve seen a noticeable increase in customer engagement since our rebranding!"
 							</p>
 							<div class="quote-author d-flex align-items-center justify-content-center">
@@ -1032,7 +1026,7 @@
 								<img src="image/quote-icon.png" alt="quote icon">
 							</div>
 							<p>
-								"I’ve worked with many design companies, but Roman Media stands out for their creativity and professionalism. 
+								"I’ve worked with many design companies, but Roman Media Graphics Limited stands out for their creativity and professionalism. 
 								They helped me create beautiful promotional materials for my events, and their printing quality was top-notch. I’ll definitely be back for future projects!"
 							</p>
 							<div class="quote-author d-flex align-items-center justify-content-center">
