--- a/promo-page.html
+++ b/promo-page.html
@@ -62,7 +62,7 @@
 			<div class="promo-card-grid">
     
 				<div class="promo-card">
-				   <img src="image/promo/promotional items-01.png" alt="Card Image 1" class="promo-card-image">
+				   <img src="image/promo/promotional items2-02.png.png" alt="Card Image 1" class="promo-card-image">
 					<div class="promo-card-content">
 					 <h2 class="promo-card-title">Awards</h2>
 					 <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
@@ -70,7 +70,7 @@
 				</div>
 
 				<div class="promo-card">
-						<img src="image/promo/promotional items-02.png" alt="Card Image 1" class="promo-card-image">
+						<img src="image/promo/promotional items2-06.png.png" alt="Card Image 1" class="promo-card-image">
 					 <div class="promo-card-content">
 					  	<h2 class="promo-card-title">Metal & bamboo flask</h2>
 					  	<!-- <p class="promo-card-description">This is a description of card 1.</p> -->
@@ -78,7 +78,7 @@
 				</div>
 
 				 <div class="promo-card">
-					<img src="image/promo/promotional items-03.png" alt="Card Image 1" class="promo-card-image">
+					<img src="image/promo/promotional items2-01.png" alt="Card Image 1" class="promo-card-image">
 					 <div class="promo-card-content">
 					  <h2 class="promo-card-title">Digital wooden clock</h2>
 					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
